5.15 group 관련. 초대 관련 기능 디버깅